Added new endpoint to query grids by bird association id.
