# src/main/domain/routers/gridRouter.js
@@ -4,6 +4,7 @@ const Grid = require('../controllers/grid')
 const grid = new Grid()
 
 gridRouter.get('/', grid.getAll() )
+gridRouter.get('/birdAssociation/:birdAssociationId', grid.getAllForBirdAssociation())
 gridRouter.get('/:gridId', grid.getGridInfo())
 gridRouter.get('/:gridId/atlas', grid.getGridStatsActive())
 //gridRouter.get('/:areaId/atlas/:atlasId', grid.getGridStats())
